# tt-events-realtime.service.python

./: .env.example  .gitignore  README.md  admon_main.py  alembic.ini  pyproject.toml  wsgi.py  wsgi_internal.py
.github/workflows/: ci.yml
docs/: TECHNICAL_DOCUMENTATION.md  WEBSOCKET_CLIENT_GUIDE.md  asyncapi.yaml
migrations/: env.py  script.py.mako
migrations/versions/: 2026_06_16_1843_3434c8aa02fe_create_entities.py
src/: __init__.py  application.py
src/domain/: __init__.py  exceptions.py
src/domain/dtos/: __init__.py  event_create.py  event_details.py  event_filters.py  event_page.py  event_query.py  event_update.py  join_request.py  joiner_info.py  location_update.py
src/domain/entities/: __init__.py  event.py  joiner.py  location.py  realtime_event.py  user.py
src/domain/ports/: __init__.py  authentication.py
src/domain/ports/database/: __init__.py  events_repository.py  joiners_repository.py  locations_repository.py  repository.py  users_repository.py
src/domain/ports/events/: __init__.py  publisher.py
src/domain/use_cases/: __init__.py  create_event_and_resolve_location.py  get_all_guests.py  get_joiners_for_events.py  join_event.py  leave_event.py
src/entrypoints/: __init__.py  register_fastapi_exception_handlers.py
src/entrypoints/admon/: fastapi_app.py
src/entrypoints/fastapi/: register_fastapi_exception_handlers.py  wsgi.py  wsgi_internal.py
src/entrypoints/internal/: fastapi_app.py
src/entrypoints/jobs/: delete_expired_events.py  delete_unused_locations.py  initialize_job.py
src/entrypoints/users/: fastapi_app.py  openapi.py
src/infra/auth/: __init__.py  simple_name.py
src/infra/config/: __init__.py  settings.py  utils.py
src/infra/events/: __init__.py  fastapi_websocket.py
src/infra/logging/: __init__.py  configuration.py  context.py
tests/: __init__.py
tests/integration/: conftest.py  test_fastapi_app.py
tests/integration/database/: test_sqlalchemy_adapters.py
tests/integration/events/: __init__.py  test_fastapi_websocket.py
tests/unit/: __init__.py  fakes.py  test_entities.py  test_fastapi_websocket_publisher.py  test_logging.py  test_settings.py  test_sqlalchemy_types.py
tests/unit/use_cases/: test_cancel_event.py  test_create_event.py  test_create_event_and_resolve_location.py  test_get_events.py  test_join_event.py  test_remaining_use_cases.py  test_uncancel_event.py  test_update_event.py
(+39 files in other folders)
